fix selection on IE11

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/_config.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/_config.sass
@@ -37,6 +37,9 @@
 	background-color: $primary
 	color: #fff
 
+select::-ms-expand
+	display: none
+
 body
 	&::-webkit-scrollbar
 		width: 4px
